Completed all three recipe pages with ingredients, directions, and image of final product. Need to reformat the homepage to possibly make it look nicer.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/choc_chip_pancakes.html">Chocolate Chip Pancakes</a>
-    <a href="recipes/pasta_salad.html">Pasta Salad</a>
+    <h1>Odin Recipes</h1><br><br>
+    <a href="recipes/choc_chip_pancakes.html">Chocolate Chip Pancakes</a><br><br>
+    <a href="recipes/pasta_salad.html">Pasta Salad</a><br><br>
     <a href="recipes/chicken_legs.html">Air Fryer Chicken Legs</a>
 </body>
 </html>
