--- a/recipes/chicken_legs.html
+++ b/recipes/chicken_legs.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Air Fryer Chicken Legs</h1>
+
+    <img src="chicken.webp" alt="Picture of finished chicken legs" style="width:350px;height:300px;">
+
+    <h3><b>Ingredients</b></h3>
+    <ul>
+        <li>1/2 teaspoon garlic powder</li>
+        <li>1/2 teaspoon paprika</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/2 teaspoon freshly ground black pepper</li>
+        <li>4 skin-on chicken drumsticks</li>
+    </ul>
+
+    <h3><b>Directions</b></h3>
+    <h4><b>Step 1</b></h4>
+    <p>Preheat an air fryer to 400 degrees F (200 degrees C) according to manufacturer’s instructions. Combine garlic powder, paprika, salt, and pepper in a small bowl.</p>
+    <h4><b>Step 2</b></h4>
+    <p>Place drumsticks on a clean work surface. Sprinkle spice mix evenly over all sides of the drumsticks.</p>
+    <h4><b>Step 3</b></h4>
+    <p>Place drumsticks in the basket of the air fryer and cook for 10 minutes. Using tongs, flip chicken over and cook for 10 minutes more. Rest for 5 minutes before serving. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</p>
+
 </body>
 </html>
